# indexer-rs

./: .auto-changelog  .dockerignore  .env  .gitignore  .release-please-manifest.json  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  Cargo.toml  Dockerfile.indexer-service-rs  Dockerfile.indexer-tap-agent  Makefile  README.md  TAP_AGENT_TOKIO_DESIGN.md  contrib-local-network-changes.md  dev-reload.sh  diesel.toml  docker-compose.yml  docker_stop_remove.sh  init_test_postgres.sh  justfile  pg_admin.sh  prof-reload.sh  release-please-config.json  run_network.sh  rustfmt.toml  security.md  setup-test-network.sh  template.toml
common/: CHANGELOG.md  Cargo.toml
common/src/: address.rs  cost_model.rs  escrow_accounts.rs  escrow_monitor.rs  graphql.rs  indexer_errors.rs  lib.rs  signature_verification.rs  subgraph_client.rs  tap.rs  tap_manager.rs  test_vectors.rs  types.rs  watcher.rs
common/src/allocations/: mod.rs  monitor.rs
common/src/attestations/: dispute_manager.rs  mod.rs  signer.rs  signers.rs
common/src/indexer_service/: mod.rs
common/src/metrics/: mod.rs
common/src/network_subgraph/: mod.rs
common/src/subgraph_client/: client.rs  mod.rs  monitor.rs
common/src/tap/: checks.rs  receipt_store.rs
config/: CHANGELOG.md  Cargo.toml  default_values.toml  maximal-config-example.toml  minimal-config-example.toml
config/src/: config.rs  grt.rs  lib.rs
crates/attestation/: Cargo.toml
crates/attestation/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: allocations.rs  attestation.rs  dispute_manager.rs  error.rs  escrow_accounts.rs  lib.rs  middleware.rs  tap.rs  test_vectors.rs  wallet.rs  watcher.rs
crates/config/: CHANGELOG.md  Cargo.toml  default_values.toml  maximal-config-example.toml  minimal-config-example.toml
crates/config/src/: config.rs  grt.rs
crates/dips/: Cargo.toml  build.rs  package-lock.json  package.json  tsconfig.json
crates/dips/proto/: dips.proto  gateway.proto  indexer.proto
crates/dips/src/: database.rs  eip5267.rs  escrow.rs  inflight.rs  ipfs.rs  lib.rs  metrics.rs  offers.rs  price.rs  registry.rs  server.rs  signers.rs  store.rs  trusted_signers.rs
crates/monitor/: Cargo.toml
crates/monitor/src/: allocations.rs  attestation.rs  backoff.rs  deployment_to_allocation.rs  dispute_manager.rs  escrow_accounts.rs  freshness.rs  horizon_detection.rs  lib.rs  redeemed_allocations.rs
crates/profiler/: Cargo.toml
crates/profiler/src/: error.rs  lib.rs
crates/service/: CHANGELOG.md  Cargo.toml
crates/service/src/: constants.rs  error.rs  lib.rs  main.rs  metrics.rs  middleware.rs  profiling.rs  routes.rs  service.rs  tap.rs  tap_v1.rs  tap_v2.rs  wallet.rs
crates/service/tests/: router_test.rs
crates/tap-agent/: CHANGELOG.md  Cargo.toml
crates/tap-agent/src/: actor_migrate.rs  adaptative_concurrency.rs  agent.rs  backoff.rs  cli.rs  database.rs  lib.rs  main.rs  metrics.rs  profiling.rs  subgraph_client_abstraction.rs  subgraph_client_simple.rs  task_lifecycle.rs  test.rs  test_legacy_ractor.rs.disabled  test_utils.rs  tracker.rs
crates/tap-agent/tests/: allocation_lifecycle_test.rs.disabled  end_to_end_integration_test.rs  failure_scenarios_test.rs.disabled  postgres_notification_test.rs  production_integration_tests.rs  production_integration_tests.rs.disabled  production_like_valid_receipt_test.rs  rav_persister_integration_test.rs  sender_account_manager_test.rs  sender_account_test.rs  tap_agent_diagnostics_test.rs  tap_agent_test.rs
crates/test-assets/: Cargo.toml
crates/test-assets/src/: lib.rs
dips/: Cargo.toml
dips/src/: lib.rs
integration-tests/: .env  Cargo.toml  DIRECT_INDEXER_TESTING.md  INTEGRATION_TESTING_INSTRUCTIONS.md  fund_escrow.sh
integration-tests/src/: constants.rs  database_checker.rs  enhanced_tests.rs  env_loader.rs  indexer_cli.rs  load_test.rs  main.rs  metrics.rs  rav_tests.rs  receipt.rs  signature_test.rs  test_config.rs  test_context.rs  test_utils.rs  utils.rs
local-service/: Cargo.toml
local-service/src/: allocations.rs  bootstrap.rs  keys.rs  lib.rs  main.rs  subgraph.rs
rav_e2e/: Cargo.toml  fund_escrow.sh  testing_plan.md
rav_e2e/src/: main.rs  metrics.rs  rav_tests.rs  receipt.rs
service/: CHANGELOG.md  Cargo.toml  build.rs  maximal-config-example.toml  minimal-config-example.toml
service/src/: allocation_monitor.rs  attestation_signers.rs  cli.rs  config.rs  database.rs  error.rs  escrow_monitor.rs  graph_node.rs  lib.rs  main.rs  query_processor.rs  service.rs  tap_manager.rs  test_utils.rs  test_vectors.rs  util.rs
service/src/common/: address.rs  allocation.rs  database.rs  indexer_error.rs  indexer_management_client.rs  mod.rs  network_subgraph.rs  query_fee_models.rs  schema.rs  types.rs  verifier.rs
service/src/database/: dips.rs  mod.rs
service/src/metrics/: mod.rs
service/src/model/: mod.rs  resolver.rs  schema.rs
service/src/query_fee/: allocations.rs  mod.rs
service/src/receipt_collector/: mod.rs  receipt_collector.rs
service/src/routes/: cost.rs  dips.rs  mod.rs  status.rs
service/src/server/: mod.rs  status_server.rs
tap-agent/: CHANGELOG.md  Cargo.toml  maximal-config-example.toml  minimal-config-example.toml
tap-agent/.sqlx/: query-948ccdb443b4e9e2ae96b1f3873c7979efb384c2b79535cc46a171248986d00f.json  query-fef5849dc64c15d1188d6398c93a59bfaafd9a38cf342739cdabf8b7bba073d3.json
tap-agent/src/: adaptative_concurrency.rs  agent.rs  aggregator_endpoints.rs  backoff.rs  cli.rs  config.rs  database.rs  lib.rs  main.rs  metrics.rs  tracker.rs
tap-agent/src/agent/: allocation_id_tracker.rs  mod.rs  sender_account.rs  sender_accounts_manager.rs  sender_allocation.rs  sender_fee_tracker.rs  unaggregated_receipts.rs
tap-agent/src/tap/: account.rs  accounts_manager.rs  context.rs  escrow_adapter.rs  executor.rs  mod.rs  rav_storage_adapter.rs  receipt_checks_adapter.rs  receipt_storage_adapter.rs  sender_account.rs  sender_accounts_manager.rs  (+4 more)
tap-agent/tests/: integration_test.rs  sender_account_tests.rs  sender_allocation_tests.rs  sender_manager_tests.rs  test_utils.rs
tap_agent/: Cargo.toml
tap_agent/src/: agent.rs
(+586 files in other folders)
