[workspace]
members = [
    "crates/allocation",
    "crates/attestation",
    "crates/config",
    "crates/dips",
    "crates/indexer-receipt",
    "crates/monitor",
    "crates/query",
    "crates/service",
    "crates/tap-agent",
    "crates/test-assets",
    "crates/watcher",
    "integration-tests",
]
resolver = "2"

[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
anyhow = { version = "1.0.72" }
async-trait = "0.1.83"
axum = { version = "0.8.3", default-features = false, features = [
    "tokio",
    "http1",
    "http2",
] }
base64 = "0.22.1"
bigdecimal = "0.4.3"
bip39 = "2.0.0"
bon = "3.3"
build-info = "0.0.40"
build-info-build = { version = "0.0.40", default-features = false }
clap = "4.4.3"
educe = "0.6.0"
env_logger = { version = "0.11.0", default-features = false }
eventuals = "0.6.7"
futures = "0.3"
futures-util = { version = "0.3.28", default-features = false }
graphql_client = { version = "0.14.0", features = ["reqwest-rustls"] }
graph-networks-registry = "0.6.1"
hex-literal = "0.4.1"
insta = "1.42.2"
itertools = "0.14.0"
jsonrpsee = { version = "0.24.0", features = ["http-client", "tracing"] }
prometheus = "0.13.3"
prost = "0.13.4"
prost-types = "0.13.3"
ractor = { version = "0.14", features = [
    "async-trait",
], default-features = false }
rand = "0.9.0"
reqwest = { version = "0.12", features = [
    "charset",
    "h2",
], default-features = false }
rstest = "0.24.0"
ruint = { version = "1.12.3", features = [
    "num-traits",
], default-features = false }
serde = { version = "1.0.206", default-features = false }
serde_json = "1.0.124"
serde_yaml = "0.9.21"
serial_test = "3.2.0"
sqlx = { version = "0.8.2", features = [
    "bigdecimal",
    "chrono",
    "json",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio",
    "rust_decimal",
    "uuid",
], default-features = false }
stdext = "0.3.3"
tap_aggregator = { version = "0.5.1", default-features = false }
tap_core = { version = "4.1.0", default-features = false }
tap_graph = { version = "0.3.0", features = ["v2"] }
tempfile = "3.8.0"
test-log = { version = "0.2.12", default-features = false }
test-with = "0.14.6"
thegraph-core = { version = "0.14.0", features = [
    "attestation",
    "alloy-eip712",
    "alloy-sol-types",
    "alloy-rlp",
    "alloy-signers",
    "alloy-signer-local",
    "alloy-signer-mnemonic",
    "serde",
] }
thegraph-graphql-http = { version = "0.3.2", features = ["reqwest"] }
thiserror = "1.0.49"
tokio = "1.40"
tokio-test = "0.4.4"
tonic = { version = "0.13.0", features = ["tls-native-roots", "gzip"] }
tonic-build = "0.13.0"
tower-service = "0.3.3"
tower-test = "0.4.0"
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3", features = [
    "json",
    "env-filter",
    "ansi",
], default-features = false }
uuid = { version = "1.11.0", features = ["v7"] }
wiremock = "0.6.1"
wiremock-grpc = "0.1.0"

# Insta benefits from being compiled in release mode, even as dev dependency
# see https://insta.rs/docs/quickstart
[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
