[package]
name = "indexer-common"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror.workspace = true
async-trait.workspace = true
alloy.workspace = true
anyhow.workspace = true
eventuals.workspace = true
reqwest.workspace = true
sqlx.workspace = true
tap_core.workspace = true
tracing.workspace = true
bigdecimal.workspace = true
prometheus.workspace = true
thegraph-core.workspace = true
axum.workspace = true
lazy_static.workspace = true
thegraph-graphql-http.workspace = true
build-info.workspace = true

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["arbitrary_precision"] }
tokio = { workspace = true, features = ["full", "macros", "rt"] }

arc-swap = "1.6.0"
keccak-hash = "0.10.0"
regex = "1.7.1"
secp256k1 = { version = "0.29.0", features = ["recovery"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
autometrics = { version = "1.0.1", features = ["prometheus-exporter"] }
tower_governor = "0.3.2"
tower-http = { version = "0.5.2", features = [
    "trace",
    "cors",
    "normalize-path",
] }
tokio-util = "0.7.10"

[dev-dependencies]
env_logger = "0.11.0"
test-log = "0.2.12"
wiremock = "0.5.19"
