[package]
name = "indexer-common"
version = "1.1.0"
edition = "2021"

[dependencies]
indexer-config = { path = "../config" }
thiserror.workspace = true
async-trait.workspace = true
alloy.workspace = true
anyhow.workspace = true
eventuals.workspace = true
reqwest.workspace = true
sqlx.workspace = true
tap_core.workspace = true
tracing.workspace = true
bigdecimal.workspace = true
prometheus.workspace = true
thegraph-core.workspace = true
axum.workspace = true
lazy_static.workspace = true
thegraph-graphql-http.workspace = true
build-info.workspace = true
graphql_client.workspace = true

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "tokio-macros"] }
regex = "1.7.1"
axum-extra = { version = "0.9.3", features = [
    "typed-header",
], default-features = false }
autometrics = { version = "1.0.1", features = ["prometheus-exporter"] }
tower_governor = "0.3.2"
tower-http = { version = "0.5.2", features = [
    "cors",
    "normalize-path",
    "trace",
] }
tokio-util = "0.7.10"

[dev-dependencies]
env_logger = { version = "0.11.0", default-features = false }
test-log = { version = "0.2.12", default-features = false }
wiremock = "0.5.19"
