[package]
name = "indexer-config"
version = "1.0.0-rc.4"
edition = "2021"

[dependencies]
alloy = "0.2.1"
bigdecimal = { version = "0.4.3", features = ["serde"] }
bip39 = "2.0.0"
figment = { version = "0.10.19", features = ["env", "toml"] }
serde = "1.0.188"
serde_with = "3.8.1"
serde_repr = "0.1.19"
thegraph-core = { git = "https://github.com/edgeandnode/toolshed", rev = "85ee00b", features = [
    "subgraph-client",
] }
url = { version = "2.5.0", features = ["serde"] }
tracing = "0.1.34"
serde_ignored = "0.1.10"

[dev-dependencies]
sealed_test = "1.1.0"
serde_test = "1.0.176"
tempfile = "3.10.1"
toml = "0.8.12"
tracing-test = "0.2.5"
