[package]
name = "indexer-config"
version = "1.2.1"
edition = "2021"

[dependencies]
alloy.workspace = true
serde.workspace = true
thegraph-core = { workspace = true, features = ["serde"] }
tracing.workspace = true
bigdecimal = { workspace = true, features = ["serde"] }
bip39 = { version = "2.0.0", features = ["rand"] }
figment = { version = "0.10.19", features = ["env", "toml"] }
serde_with = { version = "3.8.1", default-features = false }
serde_repr = "0.1.19"
serde_ignored = "0.1.10"
url = { version = "2.5.0", features = ["serde"] }
regex = "1.11.0"

[dev-dependencies]
sealed_test = "1.1.0"
serde_test = "1.0.177"
tempfile = "3.10.1"
toml = { version = "0.8.12", default-features = false }
tracing-test = "0.2.5"
