# Copyright 2023-, Edge & Node, GraphOps, and Semiotic Labs.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "local-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "local-service"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
alloy = { workspace = true, features = ["k256"] }
anyhow.workspace = true
axum = { version = "0.7.5", features = ["macros"] }
indexer-common = { path = "../common" }
dotenvy = "0.15.7"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thegraph-core.workspace = true
tokio = { workspace = true, features = ["full"] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
