[package]
name = "service"
version = "1.0.0-rc.4"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexer-common = { path = "../common" }
indexer-config = { path = "../config" }
anyhow = "1.0.57"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt", "macros", "sync", "full"] }
tracing = "0.1.34"
thiserror = "1.0.49"
serde = { version = "1.0", features = ["rc", "derive"] }
serde_json = "1"
axum = "0.7.5"
async-graphql = "7.0.3"
async-graphql-axum = "7.0.3"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "ansi",
    "fmt",
    "std",
    "json",
] }
clap = { version = "4.3.1", features = ["derive", "env"] }
sqlx = { version = "0.7.1", features = [
    "postgres",
    "runtime-tokio",
    "bigdecimal",
    "rust_decimal",
    "time",
] }
lazy_static = "1.4.0"
thegraph-core = { git = "https://github.com/edgeandnode/toolshed", rev = "85ee00b", features = [
    "subgraph-client",
] }
graphql = { git = "https://github.com/edgeandnode/toolshed", tag = "graphql-v0.3.0" }
thegraph-graphql-http = { version = "0.2.0", features = [
    "http-client-reqwest",
] }
build-info = "0.0.38"

[dev-dependencies]
hex-literal = "0.4.1"

[build-dependencies]
build-info-build = "0.0.38"
