[package]
name = "service"
version = "1.0.0-rc.5"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexer-common = { path = "../common" }
indexer-config = { path = "../config" }
anyhow.workspace = true
reqwest = { workspace = true }
tokio = { workspace = true }
tracing.workspace = true
thiserror.workspace = true
serde = { workspace = true }
serde_json.workspace = true
axum.workspace = true
sqlx.workspace = true
thegraph-core.workspace = true
thegraph-graphql-http.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
build-info.workspace = true
lazy_static.workspace = true
async-graphql = { version = "7.0.3", default-features = false }
async-graphql-axum = "7.0.3"
graphql = { git = "https://github.com/edgeandnode/toolshed", tag = "graphql-v0.3.0" }

[dev-dependencies]
hex-literal = "0.4.1"

[build-dependencies]
build-info-build = { version = "0.0.38", default-features = false }
