[package]
name = "indexer-service-rs"
version = "1.3.1"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexer-common = { path = "../common" }
indexer-config = { path = "../config" }
anyhow = { workspace = true }
prometheus = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing.workspace = true
thiserror.workspace = true
serde = { workspace = true }
serde_json.workspace = true
axum.workspace = true
sqlx.workspace = true
thegraph-core.workspace = true
thegraph-graphql-http.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt"] }
clap = { workspace = true, features = ["derive"] }
build-info.workspace = true
lazy_static.workspace = true
async-graphql = { version = "7.0.11", default-features = false }
async-graphql-axum = "7.0.11"
graphql = { git = "https://github.com/edgeandnode/toolshed", tag = "graphql-v0.3.0" }

[dev-dependencies]
hex-literal = "0.4.1"

[build-dependencies]
build-info-build = { version = "0.0.39", default-features = false }
