[package]
name = "indexer-tap-agent"
version = "1.0.0-rc.4"
edition = "2021"
publish = false

[[bin]]
name = "indexer-tap-agent"
path = "src/main.rs"

[dependencies]
indexer-common = { path = "../common" }
indexer-config = { path = "../config" }
alloy.workspace = true
anyhow.workspace = true
async-trait.workspace = true
sqlx.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
eventuals.workspace = true
tracing.workspace = true
prometheus.workspace = true
axum.workspace = true
tap_core.workspace = true
tokio.workspace = true
lazy_static.workspace = true
thegraph-core.workspace = true
clap.workspace = true
tracing-subscriber.workspace = true
bigdecimal = { workspace = true, features = ["serde", "string-only"] }
ruint = { version = "1.12.3", features = ["num-traits"] }
futures-util = "0.3.28"
jsonrpsee = { version = "0.24.0", features = ["http-client", "macros"] }
tap_aggregator = { git = "https://github.com/semiotic-ai/timeline-aggregation-protocol", rev = "b5f2135" }
ractor = "0.9"

[dev-dependencies]
tempfile = "3.8.0"
wiremock = "0.6.1"
futures = "0.3.30"
