[package]
name = "indexer-tap-agent"
version = "1.1.0"
edition = "2021"
publish = false

[[bin]]
name = "indexer-tap-agent"
path = "src/main.rs"

[dependencies]
indexer-common = { path = "../common" }
indexer-config = { path = "../config" }
alloy.workspace = true
anyhow.workspace = true
async-trait.workspace = true
sqlx.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
eventuals.workspace = true
tracing.workspace = true
prometheus.workspace = true
axum.workspace = true
tap_core.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
lazy_static.workspace = true
thegraph-core.workspace = true
clap.workspace = true
tracing-subscriber.workspace = true
bigdecimal = { workspace = true, features = ["serde"] }
ruint = { version = "1.12.3", features = [
  "num-traits",
], default-features = false }
futures-util = { version = "0.3.28", default-features = false }
jsonrpsee = { version = "0.24.0", features = ["http-client", "tracing"] }
tap_aggregator = { git = "https://github.com/semiotic-ai/timeline-aggregation-protocol", rev = "eb8447e" }
ractor = { version = "0.9", features = [
  "async-trait",
], default-features = false }

[dev-dependencies]
tempfile = "3.8.0"
wiremock = "0.6.1"
futures = { version = "0.3.30", default-features = false }
