[package]
name = "indexer-attestation"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
indexer-allocation = { path = "../allocation" }
sha2.workspace = true
thegraph-core.workspace = true
tracing.workspace = true


[dev-dependencies]
test-assets = { path = "../test-assets" }
test-log.workspace = true
