[package]
name = "indexer-common"
version = "1.4.0"
edition = "2021"

[dependencies]
thiserror.workspace = true
async-trait.workspace = true
alloy.workspace = true
anyhow.workspace = true
eventuals.workspace = true
reqwest.workspace = true
sqlx.workspace = true
tap_core.workspace = true
tracing.workspace = true
bigdecimal.workspace = true
prometheus.workspace = true
thegraph-core.workspace = true
axum.workspace = true
lazy_static.workspace = true
thegraph-graphql-http.workspace = true
build-info.workspace = true
graphql_client.workspace = true
tower-http.workspace = true
tower.workspace = true

axum-extra = { version = "0.9.3", features = [
  "typed-header",
], default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "tokio-macros"] }
cost-model = { git = "https://github.com/graphprotocol/agora", rev = "3ed34ca" }
regex = "1.7.1"
tokio-util = "0.7.10"
bip39 = "2.0.0"
pin-project = "1.1.7"
headers = "0.4.0"

[dev-dependencies]
env_logger = { version = "0.11.0", default-features = false }
test-log = { version = "0.2.12", default-features = false }
wiremock = "0.5.19"
