[package]
name = "indexer-common"
version = "1.4.0"
edition = "2021"

[dependencies]
indexer-config = { path = "../config" }
indexer-query = { path = "../query" }
indexer-allocation = { path = "../allocation" }
indexer-attestation = { path = "../attestation" }
indexer-watcher = { path = "../watcher" }
thiserror.workspace = true
async-trait.workspace = true
alloy.workspace = true
anyhow.workspace = true
eventuals.workspace = true
reqwest.workspace = true
sqlx.workspace = true
tap_core.workspace = true
tracing.workspace = true
bigdecimal.workspace = true
prometheus.workspace = true
thegraph-core.workspace = true
axum.workspace = true
lazy_static.workspace = true
build-info.workspace = true
graphql_client.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "tokio-macros"] }
bip39.workspace = true

[dev-dependencies]
env_logger = { version = "0.11.0", default-features = false }
test-log = { version = "0.2.12", default-features = false }
wiremock = "0.5.19"
test-assets = { path = "../test-assets" }
