[package]
name = "indexer-config"
version = "1.6.0"
edition = "2021"

[dependencies]
bigdecimal = { workspace = true, features = ["serde"] }
bip39 = { version = "2.0.0", features = ["rand"] }
figment = { version = "0.10.19", features = ["env", "toml"] }
regex = "1.11.0"
serde.workspace = true
serde_ignored = "0.1.10"
serde_with = { version = "3.8.1", default-features = false }
serde_repr = "0.1.19"
thegraph-core.workspace = true
tracing.workspace = true
url = { version = "2.5.0", features = ["serde"] }

[dev-dependencies]
sealed_test = "1.1.0"
serde_test = "1.0.177"
tempfile = "3.10.1"
toml = { version = "0.8.12", default-features = false }
tracing-test = "0.2.5"
