[package]
name = "indexer-dips"
version = "0.1.0"
edition = "2021"

[features]
default = ["rpc", "db"]
rpc = ["dep:prost", "dep:tonic", "dep:tonic-build", "dep:bytes"]
db = ["dep:sqlx"]

[dependencies]
build-info.workspace = true
thiserror.workspace = true
anyhow.workspace = true
thegraph-core.workspace = true
async-trait.workspace = true
uuid.workspace = true
tokio.workspace = true
indexer-monitor = { path = "../monitor" }

bytes = { version = "1.10.0", optional = true }
derivative = "2.2.0"

futures = "0.3"
http = "0.2"
prost = { workspace = true, optional = true }
ipfs-api-backend-hyper = { version = "0.6.0", features = ["with-send-sync"] }
ipfs-api-prelude = { version = "0.6.0", features = ["with-send-sync"] }
serde_yaml.workspace = true
serde.workspace = true
sqlx = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }

[dev-dependencies]
rand = "0.9.0"
indexer-watcher = { path = "../watcher" }

[build-dependencies]
tonic-build = { workspace = true, optional = true }
