[package]
name = "indexer-dips"
version = "0.1.0"
edition = "2021"

[features]
default = ["rpc", "db"]
rpc = [
    "dep:prost",
    "dep:tonic",
    "dep:tonic-build",
    "dep:tonic-prost",
    "dep:tonic-prost-build",
    "dep:bytes",
    "dep:graph-networks-registry",
    "dep:serde",
    "dep:serde_yaml",
]
db = [
    "dep:sqlx",
    "dep:build-info",
    "dep:indexer-monitor",
    "dep:graph-networks-registry",
    "dep:serde",
    "dep:serde_yaml",
]

[dependencies]
anyhow.workspace = true
thegraph-core.workspace = true
async-trait.workspace = true
uuid.workspace = true
tokio.workspace = true
tracing.workspace = true
bs58 = "0.5"
build-info = { workspace = true, optional = true }
indexer-monitor = { path = "../monitor", optional = true }
thiserror.workspace = true
graph-networks-registry = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_yaml = { version = "0.9", optional = true }

# IPFS client dependencies
derivative = "2.2.0"
futures.workspace = true
ipfs-api-backend-hyper = { version = "0.6.0", features = ["with-send-sync", "with-hyper-tls"] }

bytes = { version = "1.10.0", optional = true }
prost = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }
tonic-prost = { workspace = true, optional = true }

[dev-dependencies]
testcontainers-modules = { workspace = true, features = ["postgres"] }
test-assets = { path = "../test-assets" }
indexer-monitor = { path = "../monitor" }
graph-networks-registry.workspace = true
build-info.workspace = true
rand = "0.8"

[build-dependencies]
tonic-build = { workspace = true, optional = true }
tonic-prost-build = { workspace = true, optional = true }
